--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
 blinker==1.4
-Flask==0.10.1
+Flask==0.9
 Flask-DebugToolbar==0.10.0
 Flask-SQLAlchemy==2.1
+gevent==1.0.2
+gevent-socketio==0.3.6
+gevent-websocket==0.9.5
+greenlet==0.4.9
 itsdangerous==0.24
-Jinja2==2.8
+Jinja2==2.6
 MarkupSafe==0.23
 psycopg2==2.6.1
+requests==2.9.1
 SQLAlchemy==1.0.11
-Werkzeug==0.11.3
+Werkzeug==0.8.3
 wheel==0.24.0
