--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,20 @@
 blinker==1.4
-Flask==0.9
+Flask==0.10.1
 Flask-DebugToolbar==0.10.0
 Flask-SQLAlchemy==2.1
 gevent==1.0.2
 gevent-socketio==0.3.6
 gevent-websocket==0.9.5
 greenlet==0.4.9
+httplib2==0.9.2
 itsdangerous==0.24
-Jinja2==2.6
+Jinja2==2.8
 MarkupSafe==0.23
 psycopg2==2.6.1
+pytz==2015.7
 requests==2.9.1
+six==1.10.0
 SQLAlchemy==1.0.11
-Werkzeug==0.8.3
+twilio==5.3.0
+Werkzeug==0.11.3
 wheel==0.24.0
