--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+bcrypt==2.0.0
 blinker==1.4
+cffi==1.5.2
 Flask==0.10.1
+Flask-Bcrypt==0.7.1
 Flask-DebugToolbar==0.10.0
 Flask-SQLAlchemy==2.1
 gevent==1.0.2
@@ -11,6 +14,7 @@ itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
 psycopg2==2.6.1
+pycparser==2.14
 pytz==2015.7
 requests==2.9.1
 six==1.10.0
